fixed logo alignment on project item divs

--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,7 @@ div > div > div > ul > li {
   grid-column: 2 / 3; 
   grid-row: 1 / 2;
   display: flex; 
-  align-items: center; 
+  align-items: end; 
   gap: 2rem; 
   justify-content: end; 
   margin-right: 3rem; 
@@ -196,6 +196,9 @@ div > div > div > ul > li {
   border-left: 5px solid var(--yellow-accent); 
   border-radius: 1rem; 
   padding: 1rem; 
+  display: flex; 
+  flex-direction: column; 
+  justify-content: space-between; 
 } 
 
 #announcements { 
